# ips-prod

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  visu.pov
doc/: Doxyfile
misc/: Derivator.cpp  Derivator.h  OrthogonalityChecker.h  SolverSchrodinger.cpp  ray.pov  testsDerivator.cpp  testsOrthogonalityChecker.cpp  testsSolverSchrodinger.cpp
pres/: index.html  index_benchmark.html  index_krokro.html  index_mm.html
scripts/: csv_plotter.py  density-r-z.p  generateHermiteCoefs.py
src/: Basis.cpp  Basis.h  CallbackResultBuilder.hpp  Chrono.cpp  Chrono.h  Chrono.hpp  Derivator.cpp  FactorisationFinder.hpp  FactorisationHelper.hpp  Hermite.cpp  Hermite.h  NuclearDensityCalculator.cpp  NuclearDensityCalculator.h  OrthogonalityChecker.cpp  OrthogonalityChecker.h  Poly.cpp  Poly.h  Saver.cpp  Saver.h  SolverSchrodinger.cpp  SolverSchrodinger.h  ThreadSafeAccumulator.hpp  basis.h  constants.h  hermiteCoefs.h  main.cpp  main.h  modules
src/savers/: 3Dsavers.cpp  3Dsavers.h  Saver.h  modules
tests/: modules  test#00.h  test#01.h  test#02.h  test#03.h  testsDerivator.cpp  testsHermite.cpp  testsMandatory.cpp  testsNuclearDensityCalculator.cpp  testsOrthogonalityChecker.cpp  testsSolverSchrodinger.cpp
